[package]
name = "wasm-spectrogram"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-parallel = ["dep:wasm-bindgen-rayon", "dep:rayon"]

[dependencies]
cfg-if = "1.0.4"
js-sys = "0.3.82"
rayon = { version = "1.8", optional = true }
rustfft = "6.4"
thiserror = "2.0.17"
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11"

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# version = "0.3"
# features = ["console", "Window", "Performance"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
