[package]
name = "wasm-spectrogram"
version = "0.1.0"
edition = "2024"
description = "A Rust library for generating Aegisub-like spectrogram images from audio data."
license = "MIT"
repository = "https://github.com/apoint123/wasm-spectrogram"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-parallel = ["dep:wasm-bindgen-rayon", "dep:rayon"]

[dependencies]
cfg-if = "1.0"
rayon = { version = "1.11", optional = true }
realfft = "3.5"
thiserror = "2"
wasm-bindgen-rayon = { version = "1.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.82"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
